feat: Seccion de la experiencia

--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>&lt;Lord / Dev&gt;</title>
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="assets/images/faviconWolf.svg"
-    />
-  </head>
-  <body class="bg-neutral-950">
-    <app-root></app-root>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <title>&lt; Lord / Dev &gt;</title>
+  <base href="/" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/png" href="assets/images/logo.png" />
+</head>
+
+<body class="bg-neutral-950">
+  <app-root></app-root>
+</body>
+
 </html>
