feat: Agregando etiquetas Open Graph

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,16 @@
   <title>&lt; Lord / Dev &gt;</title>
   <base href="/" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Mario Ramos - Portafolio" />
+  <meta property="og:description"
+    content="Explora los proyectos y habilidades de Mario Ramos, desarrollador web y móvil." />
+  <meta property="og:image" content="https://lorddev.netlify.app/assets/images/preview.jpg" />
+  <meta property="og:url" content="https://lorddev.netlify.app/" />
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Mario Ramos - Portafolio">
+  <meta name="twitter:description" content="Explora los proyectos y habilidades de Mario Ramos.">
+  <meta name="twitter:image" content="https://lorddev.netlify.app/assets/images/preview.jpg">
   <link rel="icon" type="image/png" href="assets/images/logo.png" />
 </head>
 
